base/booking-app/db-service.yaml
# FILE: base/booking-app/db-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgresql-service # Názov Service MUSÍ zodpovedať DATABASE_HOST v deployment.yaml
  labels:
    app: postgresql
spec:
  type: ClusterIP 
  
  # Definuje, na ktoré Pody Service smeruje (podľa app: postgresql label zo StatefulSetu)
  selector:
    app: postgresql
  
  # Mapovanie portov
  ports:
    - protocol: TCP
      port: 5432         # Štandardný PostgreSQL port
      targetPort: 5432   # Port PostgreSQL kontajnera
      name: postgresql
